# compliant_agents

./: README.md
guardrail_configs/: airline_defaults.json  airline_llm_guard.json  airline_llm_guard_tool_results.json  airline_with_llm.json
guardrail_workbench/: run_bench.py
guardrail_workbench/results/: bench_20260506_114243_gpt-4.1-mini.json  bench_20260506_120031_airline_llm_guard_tool_results.json
guardrail_workbench/test_cases/: TC-001_task1_cancel_reservation_Q69X3R.json  TC-002_task5_send_certificate_mei_brown_7075.json  TC-003_task9_cancel_reservation_NQNU5R.json  TC-004_task11_update_reservation_passengers_GV1N64.json  TC-005_task13_update_reservation_flights_XEWRD9.json  TC-006_task26_cancel_reservation_3FRNFB.json  TC-007_task37_cancel_reservation_IFOYYZ.json  (+7 more)
policy_tool_mapper/: __init__.py  build_tools_json.py  evaluator.py  graph.py  main.py  pyproject.toml  schemas.py  state.py
policy_tool_mapper/ground_truth/: airline-ground-truth.json
policy_tool_mapper/input/: airlineTools.json
policy_tool_mapper/nodes/: chunker.py  mapper.py  profiler.py  sweeper.py
policy_tool_mapper/output/: airline-mappings-gpt-4.1-mini.eval.json  airline-mappings-gpt-4.1-mini.json  airline-mappings-gpt-5.1.eval.json  airline-mappings-gpt-5.1.json  airline-mappings-gpt-5.4.eval.json  airline-mappings-gpt-5.4.json  airline-mappings.json
policy_tool_mapper/prompts/: chunker.md  mapper.md  profiler.md  sweeper.md
policy_tool_mapper/utils/: model.py  openapi_parser.py  output_formatter.py
scripts/: tasks2cvs.py  tempCodeRunnerFile.py
scripts/output/: output.csv  (+2 more)
(+29 files in other folders)
